# Cross

./: .gitignore  .gitmodules  .travis.yml  Codestyle Guideline.md  README.md  ToDo.txt  appveyor.yml  globalignore.txt
Demo/Assets/: Apocalypse.scn  Box.scn
Demo/Projects/: CMakeLists.txt
Demo/Projects/Android/: build.gradle  gradle.properties
Demo/Projects/Android/app/: CMakeLists.txt  build.gradle
Demo/Projects/Android/app/src/main/: AndroidManifest.xml
Demo/Projects/Android/gradle/wrapper/: gradle-wrapper.properties
Demo/Projects/MacOS/: libassimpMAC.dylib  libfmodL.dylib  main.cpp
Demo/Projects/MacOS/CrossMac/: Info.plist
Demo/Projects/MacOS/CrossMac.xcodeproj/: project.pbxproj
Demo/Projects/MacOS/CrossMac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Demo/Projects/MacOS/MacOS.xcodeproj/: project.pbxproj
Demo/Projects/MacOS/MacOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Demo/Projects/Windows/: Cross++.rc  Cross++.sln  Cross++.vcxproj  Cross++.vcxproj.filters  main.cpp  resource.h
Demo/Projects/iOS/: main.cpp
Demo/Projects/iOS/Cross++.xcodeproj/: project.pbxproj
Demo/Raw/: ButtonTemplate2.psd  Eye.psd
Demo/Sources/: ArrayTest.cpp  ArrayTest.h  AudioScreen.cpp  AudioScreen.h  Demo.cpp  Demo.h  FileUtils.cpp  FileUtils.h  ImGuiScreen.cpp  ImGuiScreen.h  MainScreen.cpp  MainScreen.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  ScrollScreen.cpp  ScrollScreen.h  StringTest.cpp  StringTest.h  TransformGizmo.cpp  TransformGizmo.h  UIScreen.cpp  UIScreen.h
Editor/: CCScene.cpp  CCScene.h  CrossEditor.cpp  CrossEditor.h  CrossEditor.pro  CrossEditor.qrc  CrossEditor.sln  CrossEditor.ui  CrossEditor.vcxproj  CrossEditor.vcxproj.filters  EntityComponent.ui  FileExplorer.cpp  FileExplorer.h  GLHandler.cpp  GLHandler.h  LightShader.cpp  LightShader.h  SceneView.cpp  SceneView.h  TriangleScene.cpp  TriangleScene.h  assimp.lib  main.cpp
Editor/Assets/: Cube.mat  Cube.scn  Cube.she  GameConfig.xml  Solid.sha  Textured.mat  Textured.sha
Editor/Sources/: CrossEditor.cpp  CrossEditor.h  CrossEditor.ui  ESystem.cpp  ESystem.h  EntityComponent.cpp  EntityComponent.h  FileExplorer.cpp  FileExplorer.h  FileProperties.ui  GLHandler.cpp  GLHandler.h  History.cpp  History.h  Menu.cpp  Menu.h  MeshComponent.cpp  MeshComponent.h  PropertiesView.cpp  PropertiesView.h  SceneExplorer.cpp  SceneExplorer.h  SceneView.cpp  SceneView.h  main.cpp
Games/Jim the Snake/: Icon.psd  Icon320x180.psd  Jim History.txt  Promotion.txt  ToDo.txt
Sources/: Audio.cpp  Audio.h  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  Color.cpp  Color.h  ColorX.h  Commercial.cpp  Commercial.h  Component.cpp  Component.h  Config.cpp  Config.h  Cross.h  Entity.cpp  Entity.h  Exception.cpp  Exception.h  File.cpp  File.h  Font.cpp  Font.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Graphics2D.cpp  Graphics2D.h  Graphics3D.cpp  Graphics3D.h  GraphicsGL.cpp  GraphicsGL.h  Image.cpp  Image.h  Input.cpp  Input.h  (+58 more)
Sources/Core/: Audio.cpp  Audio.h  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Color.cpp  Color.h  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  Config.cpp  Config.h  Cross.h  Entity.cpp  Entity.h  Event.h  Factory.h  File.cpp  File.h  Function.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Graphics2D.cpp  Graphics2D.h  Graphics3D.cpp  Graphics3D.h  GraphicsGL.cpp  GraphicsGL.h  Input.cpp  Input.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  (+24 more)
Sources/Events/: Event.h  FastDelegate.h
Sources/Experimental/: Array.h  ArraySTD.h  Function.h  String.cpp  String.h
Sources/FMOD/: fmod_dsp_effects.h
Sources/Internals/: Audio.cpp  Audio.h  Debugger.cpp  Debugger.h  Event.h  Exception.cpp  Exception.h  GraphicsGL.cpp  GraphicsGL.h  MemoryManager.cpp  MemoryManager.h
Sources/Math/: All.cpp  All.h  Math.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Rect.cpp  Rect.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp  Vector4D.h
Sources/Physics/: AABoxCollider.cpp  AABoxCollider.h  Body.cpp  Body.h  Collider.cpp  Collider.h  Collision.cpp  Collision.h  Physics.cpp  Physics.h  PlaneCollider.cpp  PlaneCollider.h  RigidBody.cpp  RigidBody.h  SphereCollider.cpp  SphereCollider.h
Sources/Platform/: CrossEGL.cpp  CrossEGL.h
Sources/SOIL/: SOIL.c  SOIL.cpp  SOIL.h  image_helper.c  image_helper.cpp  image_helper.h  stb_image_aug.c  stb_image_aug.cpp  stb_image_aug.h
Sources/Shaders/: DirectionalLightShader.cpp  DirectionalLightShader.h  LightCasterDiffuseShader.cpp  LightCasterDiffuseShader.h  LightCasterDiffuseSpecularShader.cpp  LightCasterDiffuseSpecularShader.h  LightCasterMaterialShader.cpp  LightCasterMaterialShader.h  LightCastersShader.cpp  LightCastersShader.h  LightDiffuseShader.cpp  LightDiffuseShader.h  LightDiffuseSpecularShader.cpp  LightDiffuseSpecularShader.h  LightMapsShader.cpp  LightMapsShader.h  LightMaterialShader.cpp  LightMaterialShader.h  LightShader.cpp  LightShader.h  LightShaders.cpp  LightShaders.h  LightsShader.cpp  LightsShader.h  MappedLightShader.cpp  MappedLightShader.h  MonochromeShader.cpp  MonochromeShader.h  MonochromeShaders.cpp  MonochromeShaders.h  MultiLightShader.cpp  MultiLightShader.h  PointLightShader.cpp  PointLightShader.h  PrimitiveShaders.cpp  PrimitiveShaders.h  Shader.cpp  Shader.h  Shaders.cpp  Shaders.h  (+14 more)
Sources/System/: Debugger.cpp  Debugger.h  Exception.cpp  MemoryManager.cpp  MemoryManager.h
Sources/Utils/: Animation.cpp  Animation.h  Button.cpp  Button.h  ColorX.cpp  ColorX.h  Commercial.cpp  Commercial.h  Cubemap.cpp  Cubemap.h  DebugScene.cpp  DebugScene.h  Debuger.cpp  Debuger.h  Debugger.cpp  Debugger.h  DirectionalLight.cpp  DirectionalLight.h  Font.cpp  Font.h  FreeCameraScene.cpp  FreeCameraScene.h  Light.cpp  Light.h  LightCaster.cpp  LightCaster.h  Misc.cpp  Misc.h  Point.cpp  Point.h  PointLight.cpp  PointLight.h  PointX.cpp  PointX.h  PrimitiveDrawer.cpp  PrimitiveDrawer.h  Rect.cpp  Rect.h  RectX.cpp  RectX.h  (+14 more)
Targets/Android/: .classpath  .cproject  .project  AndroidManifest.xml
Targets/Window/: Window.sln
(+969 files in other folders)
